--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
-django==5.1.7
-djangorestframework==3.15.0
-django-cors-headers==4.3.1
-beautifulsoup4==4.12.3
+Django==4.2.7
+djangorestframework==3.14.0
+django-cors-headers==4.3.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+PyJWT==2.8.0
+python-dotenv==1.0.0
 selenium==4.18.1
 playwright==1.42.0
 spacy==3.7.4
